--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,27 @@
   box-sizing: border-box;
 }
 
-body {
-  max-width: 800px;
+html {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(197, 197, 197, 0.164);
 }
+
+body {
+  max-width: 635px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
 .heading li {
 padding: 10px;
 display: inline;
@@ -14,7 +32,7 @@ display: inline;
 
 .styled-table {
   border-collapse: collapse;
-  margin: 25px 0;
+  margin: 10px 0;
   font-size: .9em;
   min-width: 480px;
   border-radius: 5px 5px 0 0;
@@ -87,7 +105,7 @@ th, td { display: block; } */
   grid-template-areas:
   ". swow show show"
   ". count handler percent";
-  margin: 25px 0 0 0;
+  margin: 5px 0 0 0;
 }
 
 .show {
